--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-query-devtools": "^5.68.0",
     "axios": "^1.8.3",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "yup": "^1.6.1"
   },
