--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query-devtools": "^5.68.0",
     "axios": "^1.8.3",
     "formik": "^2.4.6",
+    "html-to-text": "^9.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
